--- a/compose.yml
+++ b/compose.yml
@@ -30,6 +30,7 @@ services:
       - "8000:8000"
     volumes:
       - static_volume:/app/staticfiles
+      - ./logs:/app/logs
     depends_on:
       - db
       - redis
