--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ gunicorn==23.0.0
 pre-commit==4.4.0
 psycopg2-binary==2.9.10
 pytest==8.4.2
+pytest-django==4.11.1
 python-dotenv==1.1.1
 python-json-logger==4.0.0
 pytz==2025.2
